# rustic-city-eye

./: .gitignore  Cargo.toml  LICENSE  README.md
monitoring_app/: Cargo.toml
monitoring_app/packets_config/: publish_single_drone_disconnect_config.json
monitoring_app/persistence/: persistence.json
monitoring_app/src/: incident.rs  lib.rs  monitoring_app.rs  persistence.rs
monitoring_app/src/packets_config/: connect_config.json  will_properties.json
rustic_city_eye/: Cargo.toml  tarpaulin-report.html  test.json
rustic_city_eye/.lsp/.cache/: db.transit.json
rustic_city_eye/src/: lib.rs  main.rs
rustic_city_eye/src/camera_system/: camera.rs  camera_system.rs  camera_system_client.rs  mod.rs  run_camera.rs  run_camera_system.rs
rustic_city_eye/src/doc/: informe.md  informe_agregado_final.md  marco_teorico.md
rustic_city_eye/src/drone_system/: drone.rs  drone_center.rs  drone_config.json  drone_config.rs  drone_error.rs  drone_state.rs  drone_system.rs
rustic_city_eye/src/drones/: connect_config.json  drone.rs  drone_center.rs  drone_config.json  drone_config.rs  drone_data.rs  drone_error.rs  drone_location.rs  drone_state.rs  drone_system.rs  drones_central_config.json  drones_central_config.rs  publish_attending_incident_config .json  publish_attending_incident_config.json  publish_config.json
rustic_city_eye/src/helpers/: incident_payload.rs  location.rs  payload_types.rs
rustic_city_eye/src/monitoring/: camera_view.rs  clients.txt  connect_config.json  connect_properties.json  drone_view.rs  incident.rs  incident_view.rs  main.rs  mod.rs  monitoring_app.rs  monitoring_config.rs  persistence.rs  plugins.rs  publish_single_camera_disconnect_config.json  publish_solved_incident_config.json  run_monitoring.rs  topics.txt  topics_test.txt  windows.rs
rustic_city_eye/src/monitoring_app/: mod.rs  monitoring_app.rs  monitoring_client.rs  run_monitoring.rs
rustic_city_eye/src/mqtt/: broker.rs  broker_config.rs  broker_message.rs  client.rs  client_config.rs  client_message.rs  client_return.rs  connack_properties.rs  connect_config.rs  connect_properties.rs  connect_propierties.rs  disconnect_config.rs  error.rs  incident.rs  messages_config.rs  mod.rs  neobroker.rs  neoclient.rs  payload.rs  protocol_error.rs  protocol_return.rs  puback_reason_code.rs  publish_config.rs  publish_properties.rs  quality_of_service.rs  reader.rs  reason_code.rs  run_broker.rs  stream_operation.rs  subscribe_config.rs  subscribe_properties.rs  subscription.rs  topic.rs  user.rs  user_subscription.rs  will_properties.rs  writer.rs
rustic_city_eye/src/surveilling/: annotation.rs  annotation_error.rs  camera.rs  camera_error.rs  camera_system.rs  cameras.json  cameras_config.rs  connect_config.json  location.rs  mod.rs  (+6 more)
rustic_city_eye/tests/: broker_tests.rs  client_test.rs  connack_tests.rs  connect_tests.rs  coso.rs  drone_config_test.json  integration_tests.rs  messages_test.rs  properties_test.rs  publish_tests.rs  sub_and_publish.rs  subscribe_test.rs  will_properties_test.rs
tests/: Cargo.toml
tests/src/: config_with_invalid_auth_method.json
(+117 files in other folders)
