[package]
name = "rustic_city_eye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
mockall = "0.12.1"
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
walkers = "0.22.0"

[[bin]]
name = "broker"
path = "src/mqtt/run_broker.rs"

[[bin]]
name = "monitoring_app"
path = "src/monitoring/main.rs"


[profile.dev] 
opt-level = 1