[package]
name = "rustic_city_eye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
walkers = "=0.22.0"
serde_json = "=1.0.117"
threadpool ="1.0"
serde = { version = "1.0", features = ["derive"] }
mockall = "0.12.1"
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = { version = "*", features = ["all_loaders"] }
chrono = "0.4.38"
image = { version = "0.25.1", features = ["jpeg", "png"] }

[[bin]]
name = "broker"
path = "src/mqtt/run_broker.rs"

[[bin]]
name = "monitoring_app"
path = "src/monitoring/main.rs"


[profile.dev] 
opt-level = 1
